@@ -41,7 +41,7 @@
      </property>
     </widget>
    </item>
-   <item row="9" column="2" colspan="2">
+   <item row="9" column="2">
     <widget class="QSlider" name="separationSize">
      <property name="maximum">
       <number>100</number>
